Horizontal scrollbar fixed

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -51,6 +51,7 @@ a:hover, a:active {
 
 #utility-menu {
 	font-size: 0px;
+	overflow: hidden;
 	li {
 		font-size: @baseFontSize;
 		display: inline-block;
